# json2csv

./: .gitignore  CHANGELOG.md  CONTEXT.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
examples/: sample.json
src/json2csv/: __init__.py  cli.py  converter.py
tests/: test_cli.py  test_converter.py
