[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "json2csv"
version = "0.1.0"
description = "Convert JSON files to CSV format"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = []

[project.scripts]
json2csv = "json2csv.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# ── ruff ──────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]

# ── black ─────────────────────────────────────────────────────────────────
[tool.black]
line-length = 88
target-version = ["py311"]

# ── mypy ──────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
mypy_path = "src"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = false

# ── pyright ───────────────────────────────────────────────────────────────
[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "basic"

# ── pytest ────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=json2csv --cov-branch --cov-report=term-missing --cov-fail-under=85"

# ── coverage ──────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["json2csv"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

# ── bandit ────────────────────────────────────────────────────────────────
[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
